[tool.poetry]
name = "geospatial"
version = "0.1.0"
description = ""
authors = ["Tony Tziorvas <tonytziorvas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
geopandas = "^0.14.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
